More studies, more descriptions

--- a/studies/index.html
+++ b/studies/index.html
@@ -393,6 +393,12 @@
     <a href="https://doi.org/10.1111/j.1743-6109.2010.01943.x">
         https://doi.org/10.1111/j.1743-6109.2010.01943.x
     </a>
+    Behavioral and emotional problems and depressive symptoms decreased, while general functioning improved
+    significantly during puberty suppression. Feelings of anxiety and anger did not change between T0 and T1. While
+    changes over time were equal for both sexes, compared with natal males, natal females were older when they started
+    puberty suppression and showed more problem behavior at both T0 and T1. Gender dysphoria and body satisfaction did
+    not change between T0 and T1. No adolescent withdrew from puberty suppression, and all started cross‐sex hormone
+    treatment, the first step of actual gender reassignment.
 </p><br>
 
 <h1 id="10.1016/j.mce.2006.04.012">
@@ -402,6 +408,15 @@
     <a href="https://doi.org/10.1016/j.mce.2006.04.012">
         https://doi.org/10.1016/j.mce.2006.04.012
     </a>
+    Depot gonadotropin releasing hormone (GnRH) agonist (GnRHa) therapy is the treatment of choice for patients with
+    central precocious puberty (CPP). It is still unclear whether long-term exposure to GnRHa is associated with
+    impaired reproductive function in adulthood.
+    The present study was performed on 46 women, former CPP patients, 12.5 ± 3.7 years after the discontinuation of
+    treatment with depot GnRHa. In a structured interview, we assessed general health status, clinical signs possibly
+    associated with hyperandrogenism, menstrual cycle, gynaecological diseases and reproductive function. It appears
+    that long-term treatment with depot GnRHa is safe and does not impair reproductive function. The risk of former CPP
+    patients to develop hirsutism and/or polycystic ovary syndrome does not seem to be increased compared to the normal
+    population but this issue needs to be addressed in further long-term follow-up studies.
 </p><br>
 
 <h1 id="10.1210/jcem-67-2-368">
@@ -422,6 +437,39 @@
     <a href="https://doi.org/10.1016/j.jadohealth.2018.07.016">
         https://doi.org/10.1016/j.jadohealth.2018.07.016
     </a>
+    Due to the irreversible, high cost of death by suicide, as well as research indicating that a past attempt is a
+    robust predictor of eventual death by suicide [23], this finding warrants urgent attention. Our results indicate
+    that the combination of these two identities, both of which are associated with increased SITB rates, has a
+    compounding effect.
+    Results of this study have important clinical implications. First, medical and mental health professionals should be
+    aware of the prevalence of SITBs in transgender individuals with EDs. Our results suggest the average college-aged
+    transgender individual with an ED has more likely than not engaged in NSSI, had thoughts of suicide, and attempted
+    suicide in the past year. As such, professionals caring for these individuals should be sure to assess and monitor
+    risk regularly. Results also point to a need for treatment approaches tailored to this population. Treatments such
+    as dialectical behavioral therapy, which directly addresses suicide and self-injury and has been utilized in the
+    treatment of EDs [24], may merit consideration as a first-line treatment for such individuals. Additionally, body
+    dysphoria may be a contributor in need of particular clinical attention. Body image disturbance is a core component
+    of ED diagnoses [25], but transgender individuals report finding “typical” body image work in ED treatment
+    ineffective and dismissive of their experiences [19]. It is important for clinicians to consider that body
+    dissatisfaction in transgender individuals with EDs may require a different approach than the acceptance-based
+    techniques utilized with cisgender individuals with EDs. Notably, gender-confirming medical interventions have been
+    associated with reduced gender dysphoria, ED symptomology, and suicidality, and increased body satisfaction, in
+    transgender individuals [19,26,27].
+    More research is needed to fully understand the development, purpose, and prevalence of SITBs in this population.
+    Body dissatisfaction in transgender individuals has been connected to both disordered eating and attempted suicide
+    [28]. Desire for weight change (both gain and loss) is also associated with suicide attempts in transgender youth,
+    suggesting this connection is a product of gender and body dysphoria [5]. It may be that transgender individuals
+    develop EDs when they manipulate their diets in an attempt to make their bodies align with their desired gender
+    identity [17–19]. Over time, limited success in doing this may produce feelings of shame and anger toward and
+    disconnection from the body, leading them to increase disordered eating behaviors and/or to engage in SITBs.
+    Muehlenkamp suggested that low body regard (a person's perception of and attitude toward the body) facilitates
+    engagement in self-injury [29]. Animosity toward the body, found in both those with EDs and transgender individuals,
+    may be compounded through the combination of these identities, resulting in especially high propensity toward SITBs.
+    Research exploring the methods and body locations of self-injury in transgender individuals with and without EDs and
+    questioning participants about the function of their self-injurious behaviors could be enlightening. These
+    questions, as well as items about body-related attitudes, could elucidate the contribution of body dysphoria to
+    SITBs in this population. It may be that dysphoria leads to devaluation of and objectification of the body,
+    facilitating both EDs and SITBs.
 </p><br>
 
 <h1 id="10.1016/j.jadohealth.2016.08.027">
@@ -431,6 +479,15 @@
     <a href="https://doi.org/10.1016/j.jadohealth.2016.08.027">
         https://doi.org/10.1016/j.jadohealth.2016.08.027
     </a>
+    Compared with cisgender males, transgender adolescents had higher odds of fasting >24 hours (adjusted odds ratio
+    [AOR] = 2.9, confidence interval [CI] = 1.1–7.8), using diet pills (AOR = 8.9, 95% CI = 2.3–35.2) and taking
+    laxatives (AOR = 7.2, 95% CI = 1.4–38.4). Transgender youth had higher odds of lifetime use of steroids without a
+    prescription than male cisgender respondents (AOR = 26.6, 95% CI = 3.5–200.1). Compared with cisgender females,
+    transgender respondents had higher odds of perceiving themselves as healthy weight/underweight when they were
+    overweight/obese (AOR = 2.4, 95% CI = 1.5–4.1).
+    Conclusions<br>
+    Transgender youth disproportionately self-reported unsafe weight management behaviors and nonprescription steroid
+    use compared with cisgender youth.
 </p><br>
 
 <h1 id="10.1007/s11920-019-1097-x">
@@ -812,6 +869,20 @@
     <a href="https://doi.org/10.1177/26318318231189836">
         https://doi.org/10.1177/26318318231189836
     </a>
+    A wide scope of results was found on the prevalence of suicide-related outcomes once transgender persons got access
+    to desired surgical affirming procedures. The most unanimous finding was the decrease in suicidal ideation post-GAS,
+    with some studies adding the relevance of undergoing more than one surgery and highlighting the impact of breast
+    surgery over other procedures. Results on the prevalence of suicide attempts were less promising, with some studies
+    showing a decrease post-GAS and others showing no relevant variation or a higher prevalence than the general
+    population. The inconsistency of results could be explained by the studies’ small sample sizes, variety in
+    methodology, poor choice of control groups, lack of evaluation of external stressors and dismissal of
+    surgery-related outcomes. Such variability makes it difficult to draw conclusions and predict the success of
+    surgical interventions. Conclusions on GAS’ influence on suicide deaths cannot be drawn due to the low quantity and
+    quality of evidence.
+    It should be noted that this review focused solely on suicide-related outcomes, considering most psychological
+    outcomes have already been shown to be improved by GAS. When deciding whether to submit a patient to surgery, not
+    only the suicidality aspects should be considered, but each patient’s characteristics and the prospect of an
+    enhancement in the quality of life.
 </p><br>
 
 <h1 id="10.1186/s12889-015-1867-2">
@@ -862,6 +933,18 @@
     <a href="https://doi.org/10.1542/peds.2022-060943">
         https://doi.org/10.1542/peds.2022-060943
     </a>
+    disinformation has become a tool for authorities to limit gender-affirming health care (GAC) for transgender and
+    gender-expansive youth who experience gender dysphoria<br>
+    Medical evidence establishes that transgender and gender-diverse identities are valid, that gender dysphoria is
+    real, and that GAC is safe and effective when provided in accordance with guidelines issued by, among others, the
+    World Professional Association for Transgender Health (WPATH) and the Endocrine Society.7,8 GAC for youth is
+    supported by every relevant major medical association, including the American Academy of Pediatrics (AAP), American
+    Psychological Association, and the American Academy of Child and Adolescent Psychiatry.9–11 Although legal
+    authorities have the resources to consult the science and draft health policy that aligns with medical consensus,
+    promoters of GAC bans have ignored or mischaracterized the scientific evidence.12,13 These legal authorities have
+    erroneously contended that transgender identities are the product of mental illness and social contagion, that
+    gender dysphoria in adolescence resolves spontaneously, that GAC is forced onto patients by physicians, and that it
+    is experimental and dangerous.
 </p><br>
 
 <h1 id="10.1542/peds.2023-064292">
@@ -871,6 +954,19 @@
     <a href="https://doi.org/10.1542/peds.2023-064292">
         https://doi.org/10.1542/peds.2023-064292
     </a>
+    there is evidence that denying such care results in significant harm to children and meets diagnostic criteria for
+    medical neglect<br>
+    The benefits of GAC, most notably on mental health, self-esteem, and development, outweigh the risks in the majority
+    of circumstances. GAC is, for many, lifesaving. Research highlights how transgender youth disproportionately
+    experience negative mental health outcomes, including anxiety, depression, and suicidality.12 However, when children
+    are supported in their gender identities and have access to GAC, they have better mental health outcomes.12,13 Some
+    studies demonstrate that appropriate GAC, in the context of caregiver support, entirely mitigates the increased risk
+    of depression and suicidal ideation for TGD youth.12<br>
+    Denying GAC not only represents medical neglect, but it is also state-sanctioned emotional abuse.<br>
+    Studies have shown there are direct negative health consequences for TGD individuals as a result of these bans and
+    associated negative social media attention.4,15–17 These policies and the media coverage of them have been shown to
+    undermine TGD children’s sense of self-worth and psychological well-being,2 and are consistent with state-sanctioned
+    emotional abuse.
 </p><br>
 
 <h1 id="10.1146/annurev-med-043021-032007">
