More studies, more descriptions

--- a/studies/index.html
+++ b/studies/index.html
@@ -89,6 +89,7 @@
     Mental Health Outcomes in Transgender and Nonbinary Youths Receiving Gender-Affirming Care
 </h1>
 <p>
+    PB + GAHT = less depression, less suicidality
     <a href="https://doi.org/10.1001/jamanetworkopen.2022.0978">
         https://doi.org/10.1001/jamanetworkopen.2022.0978
     </a><br>
@@ -103,6 +104,7 @@
     Early Access to Testosterone Therapy in Transgender and Gender-Diverse Adults Seeking Masculinization
 </h1>
 <p>
+    GAHT = less gender dysphoria, less depression, less suicidality
     <a href="https://doi.org/10.1001/jamanetworkopen.2023.31919">
         https://doi.org/10.1001/jamanetworkopen.2023.31919
     </a><br>
@@ -119,6 +121,7 @@
     Gender-Affirming Hormone Therapy and Depressive Symptoms Among Transgender Adults
 </h1>
 <p>
+    GAHT = less depression
     <a href="https://doi.org/10.1001/jamanetworkopen.2025.0955">
         https://doi.org/10.1001/jamanetworkopen.2025.0955
     </a><br>
@@ -134,6 +137,7 @@
     Top Surgery and Chest Dysphoria Among Transmasculine and Nonbinary Adolescents and Young Adults
 </h1>
 <p>
+    CMS = less chest dysphoria, more gender congruence, more body image satisfaction, surgical complications low
     <a href="https://doi.org/10.1001/jamapediatrics.2022.3424">
         https://doi.org/10.1001/jamapediatrics.2022.3424
     </a><br>
@@ -151,6 +155,7 @@
     Association Between Gender-Affirming Surgeries and Mental Health Outcomes
 </h1>
 <p>
+    GAS = less psychological distress, less smoking, less suicidality
     <a href="https://doi.org/10.1001/jamasurg.2021.0952">
         https://doi.org/10.1001/jamasurg.2021.0952
     </a><br>
@@ -172,6 +177,7 @@
     Suicide Protective Factors Among Trans Adults
 </h1>
 <p>
+    Social support = less suicidality
     <a href="https://doi.org/10.1007/s10508-013-0099-8">
         https://doi.org/10.1007/s10508-013-0099-8
     </a><br>
@@ -184,6 +190,7 @@
     Gender affirming medical care of transgender youth
 </h1>
 <p>
+    GAC = better mental health, delay GAC = bad mental health
     <a href="https://doi.org/10.1016/j.cppeds.2019.100683">
         https://doi.org/10.1016/j.cppeds.2019.100683
     </a><br>
@@ -218,6 +225,8 @@
     health and quality of life outcomes, values and preferences, and costs
 </h1>
 <p>
+    GAC = better quality of life, less stigma, better mental health, better health service utilization, no significant
+    harms
     <a href="https://doi.org/10.1016/j.eclinm.2025.103458">
         https://doi.org/10.1016/j.eclinm.2025.103458
     </a><br>
@@ -247,6 +256,7 @@
     The Mental Health of Transgender Youth: Advances in Understanding
 </h1>
 <p>
+    GAC = improved psychological functioning, psychiatric symptoms secondary to medical incongruence
     <a href="https://doi.org/10.1016/j.jadohealth.2016.06.012">
         https://doi.org/10.1016/j.jadohealth.2016.06.012
     </a><br>
@@ -265,6 +275,7 @@
     Youth
 </h1>
 <p>
+    Chosen name = less depression, less suicidality
     <a href="https://doi.org/10.1016/j.jadohealth.2018.02.003">
         https://doi.org/10.1016/j.jadohealth.2018.02.003
     </a><br>
@@ -277,10 +288,10 @@
 </p><br>
 
 <h1 id="10.1016/j.jadohealth.2021.10.036">Association of Gender-Affirming Hormone Therapy With Depression, Thoughts of
-    Suicide, and
-    Attempted Suicide Among Transgender and Nonbinary Youth
+    Suicide, and Attempted Suicide Among Transgender and Nonbinary Youth
 </h1>
 <p>
+    GAHT = less depression, less suicidality
     <a href="https://doi.org/10.1016/j.jadohealth.2021.10.036">
         https://doi.org/10.1016/j.jadohealth.2021.10.036
     </a><br>
@@ -376,16 +387,6 @@
     Only 0.6% of transwomen and 0.3% of transmen who underwent gonadectomy were identified as experiencing regret.
 </p><br>
 
-<h1 id="10.1007/s004310051289">
-    Final height, gonadal function and bone mineral density of adolescent males with central precocious puberty after
-    therapy with gonadotropin-releasing hormone analogues
-</h1>
-<p>
-    <a href="https://doi.org/10.1007/s004310051289">
-        https://doi.org/10.1007/s004310051289
-    </a>
-</p><br>
-
 <h1 id="10.1111/j.1743-6109.2010.01943.x">
     Puberty suppression in adolescents with gender identity disorder: a prospective follow-up study
 </h1>
@@ -399,34 +400,6 @@
     puberty suppression and showed more problem behavior at both T0 and T1. Gender dysphoria and body satisfaction did
     not change between T0 and T1. No adolescent withdrew from puberty suppression, and all started cross‐sex hormone
     treatment, the first step of actual gender reassignment.
-</p><br>
-
-<h1 id="10.1016/j.mce.2006.04.012">
-    Long-term GnRH agonist treatment for female central precocious puberty does not impair reproductive function
-</h1>
-<p>
-    <a href="https://doi.org/10.1016/j.mce.2006.04.012">
-        https://doi.org/10.1016/j.mce.2006.04.012
-    </a>
-    Depot gonadotropin releasing hormone (GnRH) agonist (GnRHa) therapy is the treatment of choice for patients with
-    central precocious puberty (CPP). It is still unclear whether long-term exposure to GnRHa is associated with
-    impaired reproductive function in adulthood.
-    The present study was performed on 46 women, former CPP patients, 12.5 ± 3.7 years after the discontinuation of
-    treatment with depot GnRHa. In a structured interview, we assessed general health status, clinical signs possibly
-    associated with hyperandrogenism, menstrual cycle, gynaecological diseases and reproductive function. It appears
-    that long-term treatment with depot GnRHa is safe and does not impair reproductive function. The risk of former CPP
-    patients to develop hirsutism and/or polycystic ovary syndrome does not seem to be increased compared to the normal
-    population but this issue needs to be addressed in further long-term follow-up studies.
-</p><br>
-
-<h1 id="10.1210/jcem-67-2-368">
-    Resumption of puberty after long term luteinizing hormone-releasing hormone agonist treatment of central precocious
-    puberty
-</h1>
-<p>
-    <a href="https://doi.org/10.1210/jcem-67-2-368">
-        https://doi.org/10.1210/jcem-67-2-368
-    </a>
 </p><br>
 
 <h1 id="10.1016/j.jadohealth.2018.07.016">
@@ -1038,6 +1011,8 @@
         https://transequality.org/sites/default/files/docs/usts/USTS-Full-Report-Dec17.pdf
     </a>
 </p><br>
+
+Studies on <a href="/studies/CPP">central precocious puberty</a>
 
 <a href="/">
     <button class="btn gray">
