More studies, more descriptions

--- a/studies/index.html
+++ b/studies/index.html
@@ -1012,7 +1012,11 @@
     </a>
 </p><br>
 
-Studies on <a href="/studies/CPP">central precocious puberty</a>
+<a href="/studies/CPP">
+    <button class="btn gray">
+        Studies on central precocious puberty
+    </button>
+</a>
 
 <a href="/">
     <button class="btn gray">
