More studies, more descriptions

--- a/studies/CPP/index.html
+++ b/studies/CPP/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
 <p class="heading">
-    Studies
+    Studies on Central Precocious Puberty
 </p>
 <p id="count">This page contains N studies</p><br>
 
