More studies, more descriptions

--- a/studies/index.html
+++ b/studies/index.html
@@ -270,23 +270,6 @@
     symptoms might be secondary to a medical incongruence between mind and body, not primarily psychiatric (p423).
 </p><br>
 
-<h1 id="10.1016/j.jadohealth.2018.02.003">
-    Chosen Name Use Is Linked to Reduced Depressive Symptoms, Suicidal Ideation, and Suicidal Behavior Among Transgender
-    Youth
-</h1>
-<p>
-    Chosen name = less depression, less suicidality
-    <a href="https://doi.org/10.1016/j.jadohealth.2018.02.003">
-        https://doi.org/10.1016/j.jadohealth.2018.02.003
-    </a><br>
-    An increase by one context in which a chosen name could be used predicted a 5.37-unit decrease in depressive
-    symptoms, a 29% decrease in suicidal ideation, and a 56% decrease in suicidal behavior. Depressive symptoms,
-    suicidal ideation, and suicidal behavior were at the lowest levels when chosen names could be used in all four
-    contexts.<br>
-    For transgender youth who choose a name different from the one given at birth, use of their chosen name in multiple
-    contexts affirms their gender identity and reduces mental health risks known to be high in this group.
-</p><br>
-
 <h1 id="10.1016/j.jadohealth.2021.10.036">Association of Gender-Affirming Hormone Therapy With Depression, Thoughts of
     Suicide, and Attempted Suicide Among Transgender and Nonbinary Youth
 </h1>
@@ -1011,6 +994,12 @@
         https://transequality.org/sites/default/files/docs/usts/USTS-Full-Report-Dec17.pdf
     </a>
 </p><br>
+
+<a href="/studies/Chosen%20Name">
+    <button class="btn gray">
+        Studies on chosen name use with transgender youth
+    </button>
+</a>
 
 <a href="/studies/CPP">
     <button class="btn gray">
