More studies, more descriptions

--- a/studies/index.html
+++ b/studies/index.html
@@ -302,13 +302,13 @@
     adulthood.
     <a href="#10.1080/15532739.2011.700873">[8]</a>
     Post-GAC regret is rare, occurring in approximately 0.3% of individuals.
-    <a href="#10.21037/atm-20-6204">[18]</a><br>
+    <a href="/studies/regret#10.21037/atm-20-6204">[18]</a><br>
     Puberty blockers stall development of secondary sex characteristics and limit reproductive capacity while in use.
     When stopped, the effects are fully reversible and sexual development catches up to chronological age quickly.
-    [<a href="#10.1007/s004310051289">21</a>,
+    [<a href="/studies/regret#10.1007/s004310051289">21</a>,
     <a href="#10.1111/j.1743-6109.2010.01943.x">22</a>,
-    <a href="#10.1016/j.mce.2006.04.012">23</a>,
-    <a href="#10.1210/jcem-67-2-368">24</a>]<br>
+    <a href="/studies/regret#10.1016/j.mce.2006.04.012">23</a>,
+    <a href="/studies/regret#10.1210/jcem-67-2-368">24</a>]<br>
     Body dissatisfaction related to gender is correlated with disordered eating, whereby food restriction and low body
     weight may forestall distressing physical change.
     [<a href="#10.1016/j.jadohealth.2018.07.016">29</a>,
@@ -346,28 +346,6 @@
     <a href="https://doi.org/10.1080/15532739.2011.700873">
         https://doi.org/10.1080/15532739.2011.700873
     </a>
-</p><br>
-
-<h1 id="10.21037/atm-20-6204">
-    Guiding the conversation-types of regret after gender-affirming surgery and their associated etiologies
-</h1>
-<p>
-    <a href="https://doi.org/10.21037/atm-20-6204">
-        https://doi.org/10.21037/atm-20-6204
-    </a><br>
-    We found a rate of regret between 0.2–0.3%. This is consistent with the most recent data from Wiepjes et al. who
-    reported rates of regret of 0.3% for trans-masculine and 0.6% for trans-feminine patients
-    In this study, regret following GAS was rare and was consistent with the existing literature.
-</p><br>
-
-<h1 id=10.1016/j.jsxm.2018.01.016">
-    The Amsterdam Cohort of Gender Dysphoria Study (1972-2015): Trends in Prevalence, Treatment, and Regrets
-</h1>
-<p>
-    <a href="https://doi.org/10.1016/j.jsxm.2018.01.016">
-        https://doi.org/10.1016/j.jsxm.2018.01.016
-    </a><br>
-    Only 0.6% of transwomen and 0.3% of transmen who underwent gonadectomy were identified as experiencing regret.
 </p><br>
 
 <h1 id="10.1111/j.1743-6109.2010.01943.x">
@@ -743,15 +721,6 @@
     </a>
 </p><br>
 
-<h1 id="10.1023/A:1024086814364">
-    Factors Associated with Satisfaction or Regret Following Male-to-Female Sex Reassignment Surgery
-</h1>
-<p>
-    <a href="https://doi.org/10.1023/A:1024086814364">
-        https://doi.org/10.1023/A:1024086814364
-    </a>
-</p><br>
-
 <h1 id="10.1037/cpp0000288">
     Well-Being and Suicidality Among Transgender Youth After Gender-Affirming Hormones
 </h1>
@@ -776,26 +745,6 @@
     youth who had undergone substantial endogenous puberty.<br>
     In this 2-year study involving transgender and nonbinary youth, GAH improved appearance congruence and psychosocial
     functioning.
-</p><br>
-
-<h1 id="10.1097/GOX.0000000000003477">Regret after Gender-affirmation Surgery: A Systematic Review and Meta-analysis of
-    Prevalence
-</h1>
-<p>
-    <a href="https://doi.org/10.1097/GOX.0000000000003477">
-        https://doi.org/10.1097/GOX.0000000000003477
-    </a>
-</p><br>
-
-<h1 id="10.1097/SAP.0000000000003233">Long-term Outcomes After Gender-Affirming Surgery: 40-Year Follow-up Study
-</h1>
-<p>
-    <a href="https://doi.org/10.1097/SAP.0000000000003233">
-        https://doi.org/10.1097/SAP.0000000000003233
-    </a><br>
-    Gender-affirming surgery is a durable treatment that improves overall patient well-being. High patient satisfaction,
-    improved dysphoria, and reduced mental health comorbidities persist decades after GAS without any reported patient
-    regret.
 </p><br>
 
 <h1 id="10.1111/j.1365-2265.2009.03625.x">
@@ -995,13 +944,19 @@
     </a>
 </p><br>
 
-<a href="/studies/Chosen%20Name">
+<a href="/studies/regret">
+    <button class="btn gray">
+        Studies on regret
+    </button>
+</a>
+
+<a href="/studies/chosen%20name">
     <button class="btn gray">
         Studies on chosen name use with transgender youth
     </button>
 </a>
 
-<a href="/studies/CPP">
+<a href="/studies/cpp">
     <button class="btn gray">
         Studies on central precocious puberty
     </button>
