--- a/studies/chosen name/index.html
+++ b/studies/chosen name/index.html
@@ -5,7 +5,7 @@
     <meta content="Studies" property="og:title"/>
     <meta content="website" property="og:type"/>
     <meta content="https://allytoall.github.io/thumbnails/studies.png" property="og:image"/>
-    <meta content="https://allytoall.github.io/Chosen%20Name/studies" property="og:url"/>
+    <meta content="https://allytoall.github.io/studies/chosen%20name" property="og:url"/>
     <meta content="A page containing a bunch of studies"
           property="og:description"/>
     <title>Studies</title>
