--- a/studies/cpp/index.html
+++ b/studies/cpp/index.html
@@ -5,7 +5,7 @@
     <meta content="Studies" property="og:title"/>
     <meta content="website" property="og:type"/>
     <meta content="https://allytoall.github.io/thumbnails/studies.png" property="og:image"/>
-    <meta content="https://allytoall.github.io/CPP/studies" property="og:url"/>
+    <meta content="https://allytoall.github.io/studies/cpp" property="og:url"/>
     <meta content="A page containing a bunch of studies"
           property="og:description"/>
     <title>Studies</title>
