--- a/apcs/index.html
+++ b/apcs/index.html
@@ -8,8 +8,8 @@
     <meta content="https://allytoall.github.io/" property="og:url"/>
     <meta content="Allyce's Power Corp Scraper visual example" property="og:description"/>
     <title>Allyce</title>
-    <link href="/output.css" rel="stylesheet">
-    <script src="/urlHandling.js"></script>
+    <link href="/css/output.css" rel="stylesheet">
+    <script src="/js/urlHandling.js"></script>
 </head>
 <body class="page">
 <iframe
