--- a/discord/index.html
+++ b/discord/index.html
@@ -8,8 +8,8 @@
     <meta content="https://allytoall.github.io/thumbnails/discord.svg" property="og:image"/>
     <meta content="Allyce's Discord Profile" property="og:description"/>
     <title>Discord</title>
-    <link href="/output.css" rel="stylesheet">
-    <script src="/urlHandling.js"></script>
+    <link href="/css/output.css" rel="stylesheet">
+    <script src="/js/urlHandling.js"></script>
 </head>
 <body class="background">
 <div class="input">
