--- a/gpg/index.html
+++ b/gpg/index.html
@@ -9,8 +9,8 @@
     <meta content="https://allytoall.github.io/gpg" property="og:url"/>
     <meta content="Allyce's GPG Key" property="og:description"/>
     <title>allytoall@protonmail.com</title>
-    <link href="/output.css" rel="stylesheet">
-    <script src="/urlHandling.js"></script>
+    <link href="/css/output.css" rel="stylesheet">
+    <script src="/js/urlHandling.js"></script>
 </head>
 <body class="background">
 <div class="input">
