--- a/links/index.html
+++ b/links/index.html
@@ -8,8 +8,8 @@
     <meta content="https://allytoall.github.io/links" property="og:url"/>
     <meta content="Allyce's Links" property="og:description"/>
     <title>Links</title>
-    <link href="/output.css" rel="stylesheet">
-    <script src="/urlHandling.js"></script>
+    <link href="/css/output.css" rel="stylesheet">
+    <script src="/js/urlHandling.js"></script>
 </head>
 <body class="background">
 <div class="input">
