--- a/pronouns/index.html
+++ b/pronouns/index.html
@@ -8,8 +8,8 @@
     <meta content="https://allytoall.github.io/pronouns" property="og:url"/>
     <meta content="Allyce's Pronoun Page" property="og:description"/>
     <title>Pronoun Page</title>
-    <link href="/output.css" rel="stylesheet">
-    <script src="/urlHandling.js"></script>
+    <link href="/css/output.css" rel="stylesheet">
+    <script src="/js/urlHandling.js"></script>
 </head>
 <body class="page">
 <iframe
