--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -8,8 +8,8 @@
     <meta content="https://allytoall.github.io/" property="og:url"/>
     <meta content="Allyce's Silly Little Website :3" property="og:description"/>
     <title>Allyce</title>
-    <link href="/output.css" rel="stylesheet">
-    <script src="/urlHandling.js"></script>
+    <link href="/css/output.css" rel="stylesheet">
+    <script src="/js/urlHandling.js"></script>
 </head>
 <body class="background">
 <div class="input">
