--- a/likes/index.html
+++ b/likes/index.html
@@ -8,8 +8,8 @@
     <meta content="https://allytoall.github.io/quotes" property="og:url"/>
     <meta content="Quotes I like :3" property="og:description"/>
     <title>Quotes</title>
-    <link href="/output.css" rel="stylesheet">
-    <script src="/urlHandling.js"></script>
+    <link href="/css/output.css" rel="stylesheet">
+    <script src="/js/urlHandling.js"></script>
 </head>
 <body class="background">
 <div class="input">
