--- a/studies/cpp/index.html
+++ b/studies/cpp/index.html
@@ -10,7 +10,7 @@
           property="og:description"/>
     <title>Studies</title>
     <link href="/css/output.css" rel="stylesheet">
-    <link href="/studies.css" rel="stylesheet">
+    <link href="/css/studies.css" rel="stylesheet">
     <script src="/js/urlHandling.js"></script>
     <script src="/js/studyCount.js"></script>
 </head>
