--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
     <meta content="https://allytoall.github.io/" property="og:url"/>
     <meta content="Allyce's Silly Little Website :3" property="og:description"/>
+    <a href="https://girldick.gay/@Allyce" rel="me">Mastodon</a>
     <title>Allyce</title>
     <link href="/css/output.css" rel="stylesheet">
     <script src="/js/urlHandling.js"></script>
