Improved studies section

--- a/studies/index.html
+++ b/studies/index.html
@@ -13,6 +13,7 @@
     <link href="/css/studies.css" rel="stylesheet">
     <script defer src="/js/urlHandling.js"></script>
     <script defer src="/js/studies.js"></script>
+    <base href="/studies/">
 </head>
 <body>
 <h1>Studies</h1>
