--- a/studies/index.html
+++ b/studies/index.html
@@ -16,7 +16,8 @@
     <base href="/studies/">
 </head>
 <body>
-<h1>Studies</h1> <p id="study-count">Studies displayed: 0</p>
+<h1>Studies</h1>
+<p id="study-count">Studies displayed: 0</p>
 <section id="filters"></section>
 <hr>
 <main id="content"></main>
