--- a/studies/index.html
+++ b/studies/index.html
@@ -10,16 +10,23 @@
           property="og:description"/>
     <title>Studies</title>
     <link href="/css/output.css" rel="stylesheet">
-    <link href="/css/studies.css" rel="stylesheet">
+    <link href="/css/output-studies.css" rel="stylesheet">
     <script defer src="/js/urlHandling.js"></script>
     <script defer src="/js/studies.js"></script>
     <base href="/studies/">
 </head>
-<body>
-<h1>Studies</h1>
-<p id="study-count">Studies displayed: 0</p>
-<section id="filters"></section>
-<hr>
-<main id="content"></main>
+<body class="bg-white p-24 font-sans">
+<h1 class="text-[26pt] leading-[1.15] mb-4">Studies</h1>
+<p class="text-[11pt] mb-4" id="study-count">
+    Studies displayed: 0
+</p>
+<section class="mb-6 text-[11pt]" id="filters"></section>
+<hr class="mb-6">
+<main class="space-y-6" id="content"></main>
+<a class="no-underline" href="/">
+    <button class="btn gray">
+        Return
+    </button>
+</a>
 </body>
 </html>
