--- a/blahaj/index.html
+++ b/blahaj/index.html
@@ -9,6 +9,12 @@
     <meta content="Allyce's Blahaj :3 This is a redirect to https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte"
           property="og:description"/>
     <meta content="0; url=https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte" http-equiv="refresh">
+    <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
+    <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
+    <link href="/thumbnails/favicon.ico" rel="shortcut icon"/>
+    <link href="/thumbnails/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
+    <meta content="Allyce's Site" name="apple-mobile-web-app-title"/>
+    <link href="/thumbnails/site.webmanifest" rel="manifest"/>
     <title>Redirecting...</title>
 </head>
 <body>
