--- a/likes/index.html
+++ b/likes/index.html
@@ -7,6 +7,12 @@
     <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
     <meta content="https://allytoall.github.io/quotes" property="og:url"/>
     <meta content="Quotes I like :3" property="og:description"/>
+    <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
+    <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
+    <link href="/thumbnails/favicon.ico" rel="shortcut icon"/>
+    <link href="/thumbnails/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
+    <meta content="Allyce's Site" name="apple-mobile-web-app-title"/>
+    <link href="/thumbnails/site.webmanifest" rel="manifest"/>
     <title>Quotes</title>
     <link href="/css/output.css" rel="stylesheet">
     <script src="/js/urlHandling.js"></script>
