--- a/studies/index.html
+++ b/studies/index.html
@@ -8,6 +8,12 @@
     <meta content="https://allytoall.github.io/studies" property="og:url"/>
     <meta content="A page containing a bunch of studies"
           property="og:description"/>
+    <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
+    <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
+    <link href="/thumbnails/favicon.ico" rel="shortcut icon"/>
+    <link href="/thumbnails/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
+    <meta content="Allyce's Site" name="apple-mobile-web-app-title"/>
+    <link href="/thumbnails/site.webmanifest" rel="manifest"/>
     <title>Studies</title>
     <link href="/css/output.css" rel="stylesheet">
     <link href="/css/output-studies.css" rel="stylesheet">
