--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta content="website" property="og:type"/>
     <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
     <meta content="https://allytoall.github.io/" property="og:url"/>
-    <meta content="Allyce's Silly Little Website :3" property="og:description"/>
+    <meta content="Welcome to Allyce's silly little website :)" property="og:description"/>
+    <meta content="Welcome to Allyce's silly little website :)" name="description"/>
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
     <link href="/thumbnails/favicon.ico" rel="shortcut icon"/>
@@ -14,14 +15,14 @@
     <meta content="Allyce's Site" name="apple-mobile-web-app-title"/>
     <link href="/thumbnails/site.webmanifest" rel="manifest"/>
     <a href="https://girldick.gay/@Allyce" rel="me">Mastodon</a>
-    <title>Allyce</title>
+    <title>Allyce's Website</title>
     <link href="/css/output.css" rel="stylesheet">
     <script src="/js/urlHandling.js"></script>
 </head>
 <body class="background">
 <div class="input">
     <h1 class="title">
-        Welcome to Allyce's website :)
+        Welcome to Allyce's silly little website :)
     </h1>
     <a href="/aboutme">
         <button class="btn white">
