--- a/discord/index.html
+++ b/discord/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="Discord" property="og:title"/>
+
     <meta content="website" property="og:type"/>
-    <meta content="https://discord.com/users/406481120641810433" property="og:url"/>
-    <meta content="https://allytoall.github.io/thumbnails/discord.svg" property="og:image"/>
+    <link href="https://allytoall.github.io/discord" rel="canonical">
+    <meta content="https://allytoall.github.io/discord" property="og:url"/>
+    <meta content="Discord" property="og:title"/>
+    <meta content="Discord" property="og:site_name">
     <meta content="Allyce's Discord Profile" property="og:description"/>
+    <meta content="Allyce's Discord Profile" name="description"/>
+    <meta content="https://allytoall.github.io/thumbnails/discord.svg" property="og:image"/>
+
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
     <link href="/thumbnails/favicon.ico" rel="shortcut icon"/>
