--- a/games/index.html
+++ b/games/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="Games" property="og:title"/>
+
     <meta content="website" property="og:type"/>
-    <meta content="https://allytoall.github.io/thumbnails/controller.png" property="og:image"/>
+    <link href="https://allytoall.github.io/games" rel="canonical">
     <meta content="https://allytoall.github.io/games" property="og:url"/>
+    <meta content="Games" property="og:title"/>
+    <meta content="Games" property="og:site_name">
     <meta content="Allyce's Games" property="og:description"/>
+    <meta content="Allyce's Games" name="description"/>
+    <meta content="https://allytoall.github.io/thumbnails/controller.png" property="og:image"/>
+
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
     <link href="/thumbnails/favicon.ico" rel="shortcut icon"/>
