--- a/studies/index.html
+++ b/studies/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="Studies" property="og:title"/>
+
     <meta content="website" property="og:type"/>
-    <meta content="https://allytoall.github.io/thumbnails/studies.png" property="og:image"/>
+    <link href="https://allytoall.github.io/studies" rel="canonical">
     <meta content="https://allytoall.github.io/studies" property="og:url"/>
-    <meta content="A page containing a bunch of studies"
-          property="og:description"/>
+    <meta content="Studies" property="og:title"/>
+    <meta content="Studies" property="og:site_name">
+    <meta content="A page containing a bunch of studies" property="og:description"/>
+    <meta content="A page containing a bunch of studies" name="description"/>
+    <meta content="https://allytoall.github.io/thumbnails/studies.png" property="og:image"/>
+
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
     <link href="/thumbnails/favicon.ico" rel="shortcut icon"/>
