--- a/apcs/index.html
+++ b/apcs/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="Allyce's Power Corp Scraper" property="og:title"/>
+
     <meta content="website" property="og:type"/>
-    <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
-    <meta content="https://allytoall.github.io/" property="og:url"/>
+    <link href="https://allytoall.github.io/apcs" rel="canonical">
+    <meta content="https://allytoall.github.io/apcs" property="og:url"/>
+    <meta content="Allyce's Power Corp Scraper" property="og:title"/>
+    <meta content="Allyce's Power Corp Scraper" property="og:site_name">
     <meta content="Allyce's Power Corp Scraper visual example" property="og:description"/>
+    <meta content="Allyce's Power Corp Scraper visual example" name="description"/>
+    <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
+
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
     <link href="/thumbnails/favicon.ico" rel="shortcut icon"/>
