--- a/blahaj/index.html
+++ b/blahaj/index.html
@@ -2,13 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="Blahaj" property="og:title"/>
+
     <meta content="website" property="og:type"/>
-    <meta content="https://allytoall.github.io/thumbnails/Blobhaj_Default.svg" property="og:image"/>
-    <meta content="https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte" property="og:url"/>
+    <link href="https://allytoall.github.io/blahaj" rel="canonical">
+    <meta content="https://allytoall.github.io/blahaj" property="og:url"/>
+    <meta content="Blahaj" property="og:title"/>
+    <meta content="Blahaj" property="og:site_name">
     <meta content="Allyce's Blahaj :3 This is a redirect to https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte"
           property="og:description"/>
+    <meta content="Allyce's Blahaj :3 This is a redirect to https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte"
+          name="description"/>
+    <meta content="https://allytoall.github.io/thumbnails/Blobhaj_Default.svg" property="og:image"/>
+
     <meta content="0; url=https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte" http-equiv="refresh">
+
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
     <link href="/thumbnails/favicon.ico" rel="shortcut icon"/>
