--- a/code/index.html
+++ b/code/index.html
@@ -2,13 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="Source Code" property="og:title"/>
+
     <meta content="website" property="og:type"/>
-    <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image">
-    <meta content="https://github.com/AllyToAll/AllyToAll.github.io" property="og:url"/>
+    <link href="https://allytoall.github.io/code" rel="canonical">
+    <meta content="https://allytoall.github.io/code" property="og:url"/>
+    <meta content="Source Code" property="og:title"/>
+    <meta content="Source Code" property="og:site_name">
     <meta content="Website's source code This is a redirect to https://github.com/AllyToAll/AllyToAll.github.io"
           property="og:description"/>
+    <meta content="Website's source code This is a redirect to https://github.com/AllyToAll/AllyToAll.github.io"
+          name="description"/>
+    <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
+
     <meta content="0; url=https://github.com/AllyToAll/AllyToAll.github.io" http-equiv="refresh">
+
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
     <link href="/thumbnails/favicon.ico" rel="shortcut icon"/>
