--- a/gpg/index.html
+++ b/gpg/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="GPG Key" property="og:title"/>
+
     <meta content="website" property="og:type"/>
-    <meta content="https://allytoall.github.io/thumbnails/gnuprivacyguard.svg"
-          property="og:image"/>
+    <link href="https://allytoall.github.io/gpg" rel="canonical">
     <meta content="https://allytoall.github.io/gpg" property="og:url"/>
+    <meta content="GPG Key" property="og:title"/>
+    <meta content="GPG Key" property="og:site_name">
     <meta content="Allyce's GPG Key" property="og:description"/>
+    <meta content="Allyce's GPG Key" name="description"/>
+    <meta content="https://allytoall.github.io/thumbnails/gnuprivacyguard.svg" property="og:image"/>
+
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
     <link href="/thumbnails/favicon.ico" rel="shortcut icon"/>
