--- a/index.html
+++ b/index.html
@@ -2,19 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="Allyce's Website" property="og:title"/>
+
     <meta content="website" property="og:type"/>
-    <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
+    <link href="https://allytoall.github.io/" rel="canonical">
     <meta content="https://allytoall.github.io/" property="og:url"/>
+    <meta content="Allyce's Website" property="og:title"/>
+    <meta content="Allyce's Website" property="og:site_name">
     <meta content="Welcome to Allyce's silly little website :)" property="og:description"/>
     <meta content="Welcome to Allyce's silly little website :)" name="description"/>
+    <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
+
+    <link href="https://girldick.gay/@Allyce" rel="me">
+
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
     <link href="/thumbnails/favicon.ico" rel="shortcut icon"/>
     <link href="/thumbnails/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
     <meta content="Allyce's Site" name="apple-mobile-web-app-title"/>
     <link href="/thumbnails/site.webmanifest" rel="manifest"/>
-    <a href="https://girldick.gay/@Allyce" rel="me">Mastodon</a>
+
     <title>Allyce's Website</title>
     <link href="/css/output.css" rel="stylesheet">
     <script src="/js/urlHandling.js"></script>
